20-ingress/20-Ingress-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-hive
  namespace: ingress
  annotations:
    nginx.org/mergeable-ingress-type: master
    cert-manager.io/cluster-issuer: duckdns-letsencrypt-staging
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: "dashboard.be-hive.duckdns.org"
  - host: "longhorn.be-hive.duckdns.org"
  tls:
  - hosts:
    - "*.be-hive.duckdns.org"
    secretName: star-be-hive-tls
